# zipsync

./: .editorconfig  CMakeLists.txt  ChecksummedZip.cpp  ChecksummedZip.h  CommandLine.cpp  CommandLine.h  CommandLineMain.cpp  Downloader.cpp  Downloader.h  Fuzzer.cpp  Fuzzer.h  Hash.cpp  Hash.h  HttpServer.cpp  HttpServer.h  Ini.cpp  Ini.h  LocalCache.cpp  LocalCache.h  Logging.cpp  Logging.h  Manifest.cpp  Manifest.h  Path.cpp  Path.h  PlaygroundMain.cpp  StdFilesystem.cpp  StdFilesystem.h  TdmSync.cpp  TdmSync.h  TdmSync.natvis  TestCreator.cpp  TestCreator.h  TestsMain.cpp  Utils.cpp  Utils.h  ZSAssert.cpp  ZSAssert.h  ZipSync.cpp  ZipSync.h  (+12 more)
libmicrohttpd-conan/: conanfile.py  readme.txt
